// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HTTPStatusLabel should render a danger label for 4xx HTTP status code 1`] = `
<div
  class="badge"
>
  400
   
  BAD REQUEST
</div>
`;

exports[`HTTPStatusLabel should render a danger label for 5xx HTTP status code 1`] = `
<div
  class="badge"
>
  500
   
  INTERNAL SERVER ERROR
</div>
`;

exports[`HTTPStatusLabel should render a primary label for 3xx HTTP status code 1`] = `
<div
  class="badge"
>
  300
   
  MULTIPLE CHOICES
</div>
`;

exports[`HTTPStatusLabel should render a secondary label for 1xx HTTP status code 1`] = `
<div
  class="badge"
>
  100
   
  CONTINUE
</div>
`;

exports[`HTTPStatusLabel should render a secondary label for unknown HTTP status code 1`] = `
<div
  class="badge"
>
  78
   
  UNKNOWN HTTP STATUS CODE
</div>
`;

exports[`HTTPStatusLabel should render a success label for 2xx HTTP status code 1`] = `
<div
  class="badge"
>
  200
   
  OK
</div>
`;
